--- a/front/src/app/modals/ajout-obj/ajout-obj.component.html
+++ b/front/src/app/modals/ajout-obj/ajout-obj.component.html
@@ -5,12 +5,13 @@
   <form #e="ngForm" class="container-fluid">
 
     <mat-form-field class="full-width" appearance="outline">
-      <mat-label>Nombre object : </mat-label>
+      <mat-label>Nombre d'objet: </mat-label>
       <input #nb matInput name="nbObj" (keyup)="AjouterInput(+nb.value)" type="number" ngModel required>
     </mat-form-field>
 
     <div *ngFor="let element of listeInput; let i = index">
 
+      <br>
       <h2>Item n° {{ i + 1 }}</h2>
       <br>
 
@@ -18,25 +19,23 @@
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Type de l'object</mat-label>
         <mat-select #selectType [name]="element.nameTypeObj" ngModel required>
-          <mat-option value="1">Arme</mat-option>
-          <mat-option value="2">Equipement</mat-option>
-          <mat-option value="3">Explosif</mat-option>
-          <mat-option value="4">Medical</mat-option>
-          <mat-option value="5">Munition</mat-option>
-          <mat-option value="6">Ressource</mat-option>
-          <mat-option value="7">Véhicule</mat-option>
+          <mat-option *ngFor="let element of listeType" [value]="element.idType">{{ element.nomType }}</mat-option>
         </mat-select>
       </mat-form-field>
 
-      <!-- nom object -->
+      <!-- nom objet -->
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Nom</mat-label>
-        <input #nom matInput [name]="element.nameObj" type="text" placeholder="Nom de l'object" maxlength="50" ngModel required>
+        <input #nom matInput [name]="element.nameObj" type="text" placeholder="Nom de l'objet" maxlength="50" ngModel required>
         <mat-hint align="end">{{ nom.value.length }} / 50</mat-hint>
       </mat-form-field>
 
-      <!-- id faction -->
-      <mat-checkbox *ngIf="PossedeFaction(selectType.value)" [name]="element.nameCheck" labelPosition="before" color="primary" ngModel>J'appartiens aux wardens ?</mat-checkbox>
+      <p>Appartient a:</p>
+
+      <!-- faction -->
+      <mat-radio-group color="primary" [name]="element.nameCheck" ngModel required>
+        <mat-radio-button *ngFor="let element of listeFaction" [value]="element.idFaction">{{ element.nomFaction }}</mat-radio-button>
+      </mat-radio-group>
 
     </div>
   </form>
