Ajout, supp, listing depot

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,1 +1,10 @@
+<mat-toolbar color="primary">
+    <span>Logi foxhole</span>
+
+    <div id="flex"></div>
+
+    <button mat-button routerLink="" routerLinkeActive="active">Factory</button>
+    <button mat-button routerLink="/depot" routerLinkeActive="active">Depot</button>
+  </mat-toolbar>
+
 <router-outlet></router-outlet>
