--- a/front/src/app/components/factory/factory.component.html
+++ b/front/src/app/components/factory/factory.component.html
@@ -3,7 +3,8 @@
     <h2>Factory</h2>
     <br>
     <button mat-raised-button (click)="PopUpAjoutObj()" color="primary">Ajouter item</button>&nbsp;
-    <button mat-raised-button (click)="PopUpAjoutListe()" color="primary">Créer liste</button>
+    <button mat-raised-button (click)="PopUpAjoutListe()" color="primary">Créer liste</button>&nbsp;
+    <button mat-raised-button (click)="PopUpAjoutObjListe()" color="primary">Ajouter obj liste</button>
     <br><br>
 </div>
 <br>
