ajout listing supprimer évènement

--- a/front/src/app/modals/ajout-list/ajout-list.component.html
+++ b/front/src/app/modals/ajout-list/ajout-list.component.html
@@ -26,7 +26,7 @@
         </mat-select>
     </mat-form-field>
 
-    <p>Choisissez les items que vous voulez ajouter</p>
+    <p>Choisissez les items que vous voulez ajouter (Valider une fois que la qte est definie)</p>
 
     <!-- affichage des item de la nation -->
     <table class="table table-striped">
