--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -5,6 +5,7 @@
 
     <button mat-button routerLink="" routerLinkeActive="active">Factory</button>
     <button mat-button routerLink="/depot" routerLinkeActive="active">Depot</button>
+    <button mat-button routerLink="/event" routerLinkeActive="active">Event</button>
   </mat-toolbar>
 
 <router-outlet></router-outlet>
