design + responsive page event

--- a/front/src/app/components/event/event.component.html
+++ b/front/src/app/components/event/event.component.html
@@ -6,18 +6,24 @@
 </div>
 <br>
 
-<mat-card *ngFor="let element of listeEvent">
-    <mat-card-header>
-        <mat-card-title>{{ element.nomEvent }}</mat-card-title>
-        <mat-card-subtitle>
-            {{ element.dateHeureEvent | date:'dd/MM/yyyy' }} à {{ element.dateHeureEvent | date:'HH:mm' }} 
-        </mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-        <p>{{ element.descriptionEvent }}</p>
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-raised-button [disabled]="element.listeItem.length == 0" (click)="PopUpListeItemEvent(element.listeItem)" color="primary">Liste de course</button>
-        <button mat-button (click)="SuppEvent(element.idEvent, element.nomEvent)" color="warn">Supprimer event</button>
-    </mat-card-actions>
-</mat-card>
+<div class="container-fluid">
+    <div class="row">
+        <mat-card class="col-xs-12 col-md-6 col-lg-4" *ngFor="let element of listeEvent">
+            <mat-card-header>
+                <mat-card-title>{{ element.nomEvent }}</mat-card-title>
+                <mat-card-subtitle>
+                    {{ element.dateHeureEvent | date:'dd/MM/yyyy' }} à {{ element.dateHeureEvent | date:'HH:mm' }} 
+                </mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <p>{{ element.descriptionEvent }}</p>
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-raised-button [disabled]="element.listeItem.length == 0" (click)="PopUpListeItemEvent(element.listeItem)" color="primary">Liste de course</button>
+                <button mat-button (click)="SuppEvent(element.idEvent, element.nomEvent)" color="warn">Supprimer event</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+</div>
+
+
