fix bugs, modifs page factory
Les listes, items, depot et les items d'une liste sont dans l'ordre alphabétique
Certain boutons ont un petit info bulle quand on passe la souris dessus.

fix bug: La modification de la quantité d'un item n'était pas remplacer mais ajouter en tant que string a l'ancienne quantité

fix bug: l'input de la quantité a réduire n'était pas reset après la confirmation.

Dépôt:

Ajout d'un bouton pour copier me code dans le presse papier

Factory:

Le table a maintenant une bar de recherche, une pagination et un tri sur les items de la liste

--- a/front/src/app/components/depot/depot.component.html
+++ b/front/src/app/components/depot/depot.component.html
@@ -26,6 +26,16 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
             <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }"> {{ element.codeDepot }} </td>
           </ng-container>
+
+          <!-- copie code Column -->
+          <ng-container matColumnDef="copie">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Copier code </th>
+            <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }">
+              <button mat-mini-fab color="primary" [cdkCopyToClipboard]="element.codeDepot">
+                <mat-icon>content_copy</mat-icon> 
+              </button>
+            </td>
+          </ng-container>
       
           <!-- Supp Column -->
           <ng-container matColumnDef="supp">
