--- a/front/src/app/components/factory/factory.component.css
+++ b/front/src/app/components/factory/factory.component.css
@@ -1,5 +1,34 @@
-table
+/*table
 {
     box-shadow: 3px 0 6px rgb(0, 0, 0, 0.24);
-}
+} */
 
+table {
+    width: 100%;
+  }
+  
+  .filtre
+  {
+    width: 60%;
+  }
+  
+  td, th 
+  {
+    width: 25%;
+  }
+
+  th
+  {
+      font-size: 1.2em;
+      color: black;
+  }
+
+  td
+  {
+      font-size: 1em;
+  }
+
+  .table
+  {
+      width: 60%;
+  }
