--- a/front/src/app/components/depot/depot.component.html
+++ b/front/src/app/components/depot/depot.component.html
@@ -29,7 +29,7 @@
 
           <!-- copie code Column -->
           <ng-container matColumnDef="copie">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Copier code </th>
+            <th mat-header-cell *matHeaderCellDef> Copier code </th>
             <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }">
               <button mat-mini-fab color="primary" [cdkCopyToClipboard]="element.codeDepot">
                 <mat-icon>content_copy</mat-icon> 
@@ -39,7 +39,7 @@
       
           <!-- Supp Column -->
           <ng-container matColumnDef="supp">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Supprimer </th>
+            <th mat-header-cell *matHeaderCellDef> Supprimer </th>
             <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }">
                 <button mat-mini-fab color="warn" (click)="SupprimerDepot(element.idDepot, element.nomDepot)">
                     <mat-icon>delete</mat-icon>
@@ -58,7 +58,6 @@
       
         <mat-paginator [pageSizeOptions]="[5, 10, 25]"></mat-paginator>
       </div>
-
 </div>
 
 
