--- a/front/src/app/components/factory/factory.component.html
+++ b/front/src/app/components/factory/factory.component.html
@@ -37,19 +37,19 @@
                     <!-- nom Column -->
                     <ng-container matColumnDef="nomItem">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
-                        <td mat-cell *matCellDef="let element"> {{ element.nomItem }} </td>
+                        <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }"> {{ element.nomItem }} </td>
                     </ng-container>
 
                     <!-- qte a faire Column -->
                     <ng-container matColumnDef="qte">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantité à faire </th>
-                        <td mat-cell *matCellDef="let element"> {{ element.qte }} </td>
+                        <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }"> {{ element.qte }} </td>
                     </ng-container>
 
                     <!-- qte faite Column -->
                     <ng-container matColumnDef="qteFait">
                         <th mat-header-cell *matHeaderCellDef> Qte faite </th>
-                        <td mat-cell *matCellDef="let element">
+                        <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }">
                             <div class="row">
                                 <div class="col">
                                     <mat-form-field appearance="outline">
