--- a/front/src/app/components/depot/depot.component.html
+++ b/front/src/app/components/depot/depot.component.html
@@ -31,7 +31,7 @@
           <ng-container matColumnDef="copie">
             <th mat-header-cell *matHeaderCellDef> Copier code </th>
             <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }">
-              <button mat-mini-fab color="primary" [cdkCopyToClipboard]="element.codeDepot">
+              <button mat-mini-fab color="primary" (click)="ConfirmCopierCode()" [cdkCopyToClipboard]="element.codeDepot">
                 <mat-icon>content_copy</mat-icon> 
               </button>
             </td>
