--- a/front/src/app/components/factory/factory.component.html
+++ b/front/src/app/components/factory/factory.component.html
@@ -2,6 +2,7 @@
     <h2>Factory</h2>
     <br>
     <button mat-raised-button (click)="PopUpAjoutObj()" color="primary">Ajouter item</button>&nbsp;
+    <button mat-raised-button (click)="PopUpAjoutPseudo()" color="primary">Ajouter pseudo</button>&nbsp;
     <button mat-raised-button (click)="PopUpAjoutListe()" color="primary">Créer liste</button>&nbsp;
     <button mat-raised-button (click)="PopUpAjoutObjListe()" color="primary">Modifier liste</button>&nbsp;
     <button mat-raised-button (click)="PopUpSupprimerListe()" color="primary">Supprimer liste</button>&nbsp;
@@ -18,6 +19,18 @@
                 {{ element.nomListFactory }} - ({{ element.listeItem.length }})
             </mat-option>
         </mat-select>
+    </mat-form-field>
+
+    <!-- speudo choix -->
+    <mat-form-field appearance="outline" class="example-full-width">
+        <mat-label>Ton pseudo: </mat-label>
+        <input type="text" matInput [formControl]="myControl" [matAutocomplete]="auto">
+
+        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="PseudoChoisi">
+            <mat-option *ngFor="let element of listePseudoFiltre | async" [value]="element">
+                {{ element.nomPseudo }}
+            </mat-option>
+        </mat-autocomplete>
     </mat-form-field>
 
     <!-- liste des items de la liste choisie -->
@@ -37,13 +50,15 @@
                     <!-- nom Column -->
                     <ng-container matColumnDef="nomItem">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Nom </th>
-                        <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }"> {{ element.nomItem }} </td>
+                        <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }"> {{
+                            element.nomItem }} </td>
                     </ng-container>
 
                     <!-- qte a faire Column -->
                     <ng-container matColumnDef="qte">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantité à faire </th>
-                        <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }"> {{ element.qte }} </td>
+                        <td mat-cell *matCellDef="let element; let pair = even" [ngClass]="{ 'gris': pair }"> {{
+                            element.qte }} </td>
                     </ng-container>
 
                     <!-- qte faite Column -->
