--- a/front/src/app/components/factory/factory.component.html
+++ b/front/src/app/components/factory/factory.component.html
@@ -1,6 +1,7 @@
 <div class="titre">
     <h2>Factory</h2>
     <br>
+    <button mat-raised-button (click)="PopUpAjoutObj()" color="primary">Ajouter items</button>&nbsp;
     <button mat-raised-button (click)="PopUpAjoutPseudo()" color="primary">Ajouter pseudo</button>&nbsp;
     <button mat-raised-button (click)="PopUpAjoutListe()" color="primary">Créer liste</button>&nbsp;
     <button mat-raised-button (click)="PopUpAjoutObjListe()" color="primary">Modifier liste</button>&nbsp;
