Ajout page recette
- Listing des recettes
- Calcul les quantités des recettes (mass factory incluse)

- Bar de recherche des items

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -4,6 +4,7 @@
     <div id="flex"></div>
 
     <button mat-button routerLink="" routerLinkeActive="active">Factory</button>
+    <button mat-button routerLink="/recette" routerLinkeActive="active">Recette</button>
     <button mat-button routerLink="/historique" routerLinkeActive="active">Historique</button>
     <button mat-button routerLink="/depot" routerLinkeActive="active">Depot</button>
     <button mat-button routerLink="/event" routerLinkeActive="active">Event</button>
