--- a/front/src/app/components/factory/factory.component.html
+++ b/front/src/app/components/factory/factory.component.html
@@ -5,7 +5,7 @@
     <button mat-raised-button (click)="PopUpAjoutPseudo()" color="primary">Ajouter pseudo</button>&nbsp;
     <button mat-raised-button (click)="PopUpAjoutListe()" color="primary">Créer liste</button>&nbsp;
     <button mat-raised-button (click)="PopUpAjoutObjListe()" color="primary">Modifier liste</button>&nbsp;
-    <button mat-raised-button (click)="PopUpSupprimerListe()" color="primary">Supprimer liste</button>&nbsp;
+    <button mat-raised-button (click)="PopUpSupprimerListe()" color="primary">Supprimer liste</button>
     <br><br>
 </div>
 <br>
